# unimark-r

./: .env_sample  .gitignore  Makefile  README.md  docker-compose.yml
.github/actions/cache_cargo/: action.yml
.github/workflows/: code_build.yml  github-actions.yml
aws/: ecs_task_definition.json
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20220430180000_users.sql
backend/src/: main.rs  users_fetch.rs
frontend/: .gitignore  Dockerfile  package-lock.json
frontend/unimark/: package-lock.json  package.json
frontend/unimark/src/components/: Auth.tsx  Layout.tsx
frontend/unimark/src/json/: token.json
frontend/unimark/src/lib/: axios.ts
frontend/unimark/src/pages/: _document.tsx  index.tsx  main.tsx
frontend/unimark/src/pages/api/proxy/: [...all].ts
