[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.0", features = ["full"] }
tower = "0.4.12"
