[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.4", features = ["headers"] }
chrono = "0.4.19"
hyper = { version = "0.14.18", features = ["full"] }
jsonwebtoken = "8.1.0"
once_cell = "1.10.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.18.0", features = ["full"] }
tower = "0.4.12"
tracing = "0.1.34"
tracing-subscriber = { version="0.3.11", features = ["env-filter"] }
